im scrollbar fix

--- a/site/frontend/www/stylesheets/common.css
+++ b/site/frontend/www/stylesheets/common.css
@@ -523,7 +523,7 @@ a {color:#51afc3;}
 #dialogs .tabs .steps ul li.active {height:39px;line-height:39px;margin-top:0;font-size:16px;background:#fff;}
 #dialogs .tabs .steps ul li.active a {line-height:39px;color:#326fb1;}
 
-#dialogs .dialog-list {padding:8px 0;}
+#dialogs .dialog-list {padding:0;}
 #dialogs .dialog-list.scroll {max-height:500px;overflow:auto;}
 
 #dialogs .dialog-message {padding:8px 0;border-bottom:1px dashed #e2e2e2;font-size:12px;color:#393838;line-height:15px;cursor:pointer;}
@@ -1070,3 +1070,10 @@ select.pregnancy_term + .chzn-container .chzn-results li {line-height:18px;font-
 .flag.flag-za {background-position: -48px -165px}
 .flag.flag-zm {background-position: -64px -165px}
 .flag.flag-zw {background-position: -80px -165px}
+
+div.scrollbarpaper-container {position:absolute;z-index:1;background:#fff;}
+div.scrollbarpaper-track {position:absolute;top:0;right:0;height:100%;cursor:pointer;width:7px;background-color:#e5f1ff;}
+div.scrollbarpaper-drag{position:absolute;width:100%;height:100px;background-color:#b3cfed;width:9px;margin-left:-2px;border:1px solid #a5c5e8;}
+div.scrollbarpaper-drag:after {display:block;content:'';width:7px;height:7px;background:url(../images/common.png) no-repeat -257px -102px;position:absolute;top:50%;left:50%;margin:-3px -3px;}
+div.scrollbarpaper-drag {/*css3*/ -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
+.scrollbarpaper-visible{padding-right:13px;}
